syntax = "proto3";

import "proc/proc.proto";

option go_package = "sigmaos/beschedsrv/proto";

service BESched {
  rpc Enqueue(EnqueueRequest) returns (EnqueueResponse);
  rpc GetProc(GetProcRequest) returns (GetProcResponse);
  rpc GetStats(GetStatsRequest) returns (GetStatsResponse);
}

message EnqueueRequest {
  ProcProto procProto = 1;
}

message EnqueueResponse {
  string scheddID = 1;
  ProcSeqno procSeqno = 2;
}

message GetProcRequest {
  string kernelID = 1;
  uint32 mem = 2;
  ProcSeqno procSeqno = 3;
}

message GetProcResponse {
  bool oK = 1;
  uint32 qLen = 2;
  ProcProto procProto = 3;
}

message GetStatsRequest {
}

message GetStatsResponse {
  map<string, int64> nqueued = 1;
}
