syntax = "proto3";

import "proc/proc.proto";

option go_package = "sigmaos/sched/besched/proto";

message EnqueueReq {
  ProcProto procProto = 1;
}

message EnqueueRep {
  string mSchedID = 1;
  ProcSeqno procSeqno = 2;
}

message GetProcReq {
  string kernelID = 1;
  uint32 mem = 2;
  ProcSeqno procSeqno = 3;
}

message GetProcRep {
  bool oK = 1;
  uint32 qLen = 2;
  ProcProto procProto = 3;
}

message GetStatsReq {
}

message GetStatsRep {
  map<string, int64> nqueued = 1;
}
